# tpsplots

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  PROCESSORS.md  README.md  YAML_SPEC.md  create.py  generate.py  generate_all.py  inflation.py  nasa_budget.py  pyproject.toml  requirements.txt  spike.html
.claude/: hookify.processor-guidelines.local.md
.github/workflows/: README.md  generate-and-sync-charts.yml  upload-charts-to-s3.yml
docs/: area.md  bar.md  bar_family_behavior_matrix.md  controllers.md  data.md  donut.md  grouped_bar.md  index.md  line.md  line_subplots.md  lollipop.md  scatter.md  stacked_bar.md  treemap.md  us_map_pie.md  waffle.md
docs/controllers/: apollo_controller.md  china_comparisons_controller.md  comparison_charts_controller.md  mission_spending_controller.md  nasa_budget_chart.md  nasa_fy2024_controller.md  nasa_fy2025_controller.md  nasa_fy2026_controller.md  nasa_fy2027_controller.md  planetary_mission_budget.md
examples/: nasa_budget_by_year_with_projection.yaml
scripts/: s3_sync.py
src/charts/: nasa_budget_chart.py
src/data_sources/: inflation.py  nasa_budget_data_source.py
tests/: __init__.py  conftest.py  test_accounts_filter_processor.py  test_animation_area.py  test_animation_bars.py  test_animation_base.py  test_animation_config.py  test_animation_easing.py  test_animation_encoder.py  test_animation_integration.py  test_animation_line.py  test_animation_lollipop.py  test_animation_renderer.py  test_animation_tags.py  test_animation_timeline.py  test_api.py  test_apollo_controller.py  test_apollo_data_source.py  test_area_chart.py  test_award_data_processor.py  test_axis_tick_formatting.py  test_bar_chart_mixin.py  test_budget_projection_processor.py  test_calculated_column_processor.py  test_chart_configs.py  test_chart_controller.py  test_chart_view.py  test_cli.py  test_cli_animate.py  test_color_cycle_mixin.py  test_color_resolver.py  test_column_sum_processor.py  test_config_view_sync.py  test_csv_controller.py  test_csv_export.py  test_csv_source.py  test_currency_processing.py  test_data_resolver_params.py  test_dataframe_to_yaml_processor.py  test_docs_generator.py  (+52 more)
tests/fixtures/: nasa_fy2026.csv  nnsi.csv  planetary_cassini.csv
tpsplots/: __init__.py  __main__.py  api.py  base.py  chart_controller.py  chart_view.py  cli.py  colors.py  docs_generator.py  exceptions.py  nasa_budget_chart.py  schema.py  styles.py  subplot_view.py
tpsplots/animation/: __init__.py  config.py  easing.py  encoder.py  renderer.py  timeline.py
tpsplots/commands/: __init__.py  animate.py  docs.py  editor.py  s3_sync.py  textedit.py
tpsplots/config/: cache_config.py
tpsplots/controllers/: apollo_controller.py  chart_controller.py  china_comparisons_controller.py  comparison_charts_controller.py  csv_controller.py  fy2025_charts.py  fy2026_charts.py  google_sheets_controller.py  mission_spending_controller.py  nasa_budget_chart.py  nasa_fy2024_controller.py  nasa_fy2025_controller.py  (+5 more)
yaml/: china_space_science_mission_mass_growth.yaml  fy2025_new_contracts_comparison.yaml  fy2025_new_grants_awards.yaml  fy2025_new_grants_comparison.yaml  fy2026_cancelled_missions_lollipop.yaml  fy2026_congressional_vs_white_house_nasa_budgets.yaml  fy2026_directorate_cuts.yaml  fy2026_largest_cut_in_nasa_history.yaml  fy2026_nasa_budget_historical_inflation_adjusted.yaml  fy2026_nasa_budget_pbr_historical_context.yaml  fy2026_nasa_center_workforce_map.yaml  fy2026_nasa_science_by_year_inflation_adjusted.yaml  fy2026_nasa_science_divisions_quad_plot.yaml  fy2026_nasa_workforce_cuts.yaml  fy2026_new_contracts_comparison.yaml  fy2026_new_grants_comparison.yaml  human_spacecraft_dev_times.yaml  human_spaceflight_development_times.yaml  nasa_budget_biden.yaml  nasa_budget_by_year_with_projection.yaml  nasa_budget_carter.yaml  nasa_budget_clinton.yaml  nasa_budget_ford.yaml  nasa_budget_hw_bush.yaml  nasa_budget_kennedy_johnson.yaml  nasa_budget_nixon.yaml  nasa_budget_obama.yaml  nasa_budget_pbr_appropriation_by_year.yaml  nasa_budget_reagan.yaml  nasa_budget_trump.yaml  nasa_budget_w_bush.yaml  nasa_major_activites_donut.yaml  nasa_major_programs_by_year.yaml  nasa_spending_waffle.yaml  schema_yaml.example
(+237 files in other folders)
